# mstables

./: .dockerignore  .gitignore  ANDREW_README.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  COMMODITIES_AND_METALS_PLAN.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_SUMMARY.md  DDD_MERGE_PLAN.md  DOCKER_SETUP.md  Dockerfile  FINANCIAL_WEBSCRAPING.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PDS_V2_INTEGRATION_PLAN.md  PRIORITIZED_TODO_LIST.md  README.md  ROOT_CLEANUP_SUMMARY.md  SLURM_INTEGRATION.md  VERSION_STATUS.md  backtest_results.json  backtest_summary.csv  best_model.pth  data_discovery_report.txt  data_discovery_results.json  data_overview_002.py  data_overview_003.py  dataframes.py  docker-compose.yml  main.py  parse.py  populate_data_paths.py  pyproject.toml  requirements.txt  test_data_discovery.py
Crypto_Statistical_Analysis/: ANDREW_README.md  ANDREW_SECRETS.md  bitcoin-price-prediction-with-keras.ipynb  crypto-price-interactive-dashboard-daily-update.ipynb  crypto_buy_and_hold.ipynb  crypto_compare_api_docs.md  crypto_correlation.ipynb  crypto_correlation_alt1.ipynb  requirements.txt  top-50-cryptocurrencies-historical-prices-starter.ipynb
config/: README.md  data_paths.json.template  fleet_config.json.template  machine_config.json.template
non_working_code_py/: edgar_data_scraper.ipynb  morningstar_test.ipynb  nasdaq_datalink.ipynb  qtpylib.ipynb
notebooks/: data_overview.ipynb
notebooks_TODO/: FMP_backup_analyzer_2.ipynb  data_overview.ipynb  data_overview_002.ipynb  data_overview_003.ipynb  morningstar_test.ipynb  quantstats_test.ipynb  (+1 more)
src/: fetch.py  (+6 more)
(+139 files in other folders)
